{
    "name": "AzeSCon",
    "maps": [
        {
            "name": "Controller",
            "id": "a2e58b2a-b42b-47ca-af5d-2a4203661f14",
            "actions": [
                {
                    "name": "A",
                    "type": "Button",
                    "id": "aaffa157-b98f-43ac-a87d-21b0af3d771b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "918b6d1d-7a1d-4357-aba8-9bb5effccf2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "8a8e1581-2c88-4912-98bb-67fe50aec6d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "e00c8507-89f7-4a15-a5de-496194ed052e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R3",
                    "type": "Button",
                    "id": "d004b3eb-f5b6-45f1-9032-12ebb3d223a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L3",
                    "type": "Button",
                    "id": "7fdda0f6-cfb7-4746-907f-43d4272cd74b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "d91b833e-3743-4bbf-999b-cf6c953c0bdc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LB",
                    "type": "Button",
                    "id": "60b732fa-cc34-4771-babc-d4f7b82d1e82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RT",
                    "type": "Value",
                    "id": "34897062-b183-4a71-8915-b91ae2813aae",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LT",
                    "type": "Value",
                    "id": "3213bd9a-4fe2-4300-86ff-b900499204d6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "e0ae0c77-73ec-4593-aae2-b77d96b79b59",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "d3a360a5-8628-4941-a9b3-7186722057b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Arrows",
                    "type": "Value",
                    "id": "7b3c5284-9767-40cd-ac7d-bbf431bf05a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "a9b76ad5-eaaf-40ce-bdae-41b2673d35b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "0c974599-e224-4b09-bce1-6ab6064c9199",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7791c30f-0610-4527-926f-66db1c24753c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70a390b0-0eaf-4122-b973-4789d0685f1d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ad1b1e6-2634-4fda-bc29-dfefacf1be4f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65f7b801-aaf3-47d0-a354-8800d0c1a922",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e98e9225-cfcf-44fd-92af-9a217c269c87",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54976f0e-cec9-48f5-876d-918296e0e598",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a7220b8-c4ae-4afa-9edf-68b8ff1577b1",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea3b4143-69e8-42de-b6c2-c135665fcb67",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0720e29-9e18-4ab6-b330-f05d5d747d90",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "940471c1-faa3-472e-b25d-2d70de56646c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4492e02-1159-4d70-abfe-df521c1d4fee",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "944f460b-9c88-4c76-a160-4d05b70d9b87",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "106eeda0-94f8-47aa-97bc-3e1899577397",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arrows",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10682dcc-1762-433e-9350-1910db75cf70",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbb9e1f7-5f01-49bb-909f-e9490a845fe7",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "6787cbc7-1cb1-4ff3-8a17-960efccdfc40",
            "actions": [
                {
                    "name": "TastenEingabe",
                    "type": "Value",
                    "id": "17ec3452-00bc-40e9-b9c8-b6171df21033",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "66a0ead8-34bb-45d1-8046-0445451e85f3",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TastenEingabe",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "a8c5515d-5ad5-411f-92cf-f61df504c9fd",
            "actions": [
                {
                    "name": "MausEingabe",
                    "type": "Button",
                    "id": "92b20c5d-87c5-4318-8bc7-bf19a4ed74a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "64bbb9e6-cf4a-44c0-8940-718a1977d531",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightButton",
                    "type": "Button",
                    "id": "2e66c5b4-9d4b-4bfa-b941-8458c9f3ffc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddelButton",
                    "type": "Button",
                    "id": "62aece61-dd8a-47dc-96c5-2f39ae30f545",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Wheel",
                    "type": "Value",
                    "id": "5200eba1-a0b1-44c2-8289-44cdd2e79874",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "01c814e1-3b9a-4294-a9d0-42352001407c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1cdc790e-bbc6-4f76-a5d9-876d0d18af53",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MausEingabe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcab2abb-bb6b-4b6e-8bb8-b22e2db59294",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0035b2e-84cc-404f-9c54-88c44298deaa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec4e2d3e-b2fb-4194-b0d2-02390e1c8f09",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddelButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30d1fe9f-81a6-4620-9c13-c7518da31bfc",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Wheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a997809-cb72-4e01-a0f4-1530b389814a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}